metadata/force-app/main/default/objects/CustomName_nxaUI__c/CustomName_nxaUI__c.object-meta.xml
<CustomObject>
    <description>Description_GFiJe</description>
    <label>CustomLabel_wvcCb</label>
    <nameField>
        <label>CustomLabel_wvcCb</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_wvcCbs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>