metadata/force-app/main/default/objects/CustomName_nxaUI__c/fields/CustomField_jOCUC__c.field-meta.xml
<CustomField>
    <fullName>CustomField_jOCUC__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldModVN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>